Sergey_Harbach/11.Kubernetes.Basic/app-webserver.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: webserver-ns
  name: nginx-web-deploy # name of deployment
  labels:
    app: app-nginx-web # which app will be deployed
spec:
  replicas: 3
  revisionHistoryLimit: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1 # mean + 1 to all replicas = 4 all pods can be exist at same time
      maxUnavailable: 1 # mean -1 to all running pods. = 2 running and 1 terminated, and with max pods 4 == 2 can be created at same time
  selector:
    matchLabels:
      app: app-nginx-web  # which app will be used with this deploymet strategy
  template:  # everithing there and next lines - our pod specification
    metadata:
      labels:
        app: app-nginx-web # main name of app
    spec:
      containers:
      - name: nginx-web-container
        image: __dh_image:tag__ # will be replased with github action
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: 50m
            memory: 50Mi
          limits:
            cpu: 100m
            memory: 100Mi
---
apiVersion: v1
kind: Service
metadata:
  namespace: webserver-ns
  name: nginx-web-service
  labels:
    run: nginx-web-service
spec:
  ports:
  - port: 80
    protocol: TCP
  selector:
    app: app-nginx-web
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: webserver-ns
  name: ingress-sa
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/server-alias: "web.k8s-4.sa"
spec:
  rules:
    - host: app.k8s-4.sa
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx-web-service
                port:
                  number: 80
